[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/GreenFlame/GreenFlame.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://img/type1.png" type="Texture" id=2]
[ext_resource path="res://img/type2.png" type="Texture" id=3]
[ext_resource path="res://audio_demo.gd" type="Script" id=4]
[ext_resource path="res://img/background.jpg" type="Texture" id=5]
[ext_resource path="res://img/particle.png" type="Texture" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.0189873, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.221519, 0.0545565 ), 0.0, 0.0, 0, 0, Vector2( 0.556962, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.778481, 0.145466 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 680, 400, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="AudioDemo" type="Node2D"]
script = ExtResource( 4 )

[node name="Universe" type="Sprite" parent="."]
position = Vector2( 511.973, 298.222 )
scale = Vector2( 1.08829, 1.14322 )
texture = ExtResource( 5 )

[node name="Stars" type="Particles2D" parent="."]
position = Vector2( 499.467, 298.491 )
amount = 800
lifetime = 3.0
preprocess = 5.0
randomness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="installation" type="Node2D" parent="."]

[node name="Title" type="Label" parent="installation"]
margin_left = 16.0
margin_top = 22.0
margin_right = 259.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "AUDIOCAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="installation"]
margin_left = 18.0
margin_top = 71.0
margin_right = 467.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 241, 13.5 )
custom_fonts/font = SubResource( 5 )
text = "Sound everywhere, anytime"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title3" type="Label" parent="installation"]
margin_left = 17.0
margin_top = 191.0
margin_right = 375.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 672, 162.455 )
custom_fonts/font = SubResource( 6 )
text = "just copy \"audio.gd\" into your project!
then, Go in \"projects = project settings...\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title9" type="Label" parent="installation"]
margin_left = 22.0
margin_top = 100.0
margin_right = 380.0
margin_bottom = 131.0
rect_pivot_offset = Vector2( 672, 162.455 )
custom_fonts/font = SubResource( 6 )
text = " https://proximacat.com/
https://github.com/ProximaCat/
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title6" type="Label" parent="installation"]
margin_left = 709.0
margin_top = 461.0
margin_right = 1011.0
margin_bottom = 577.0
rect_pivot_offset = Vector2( 672, 162.455 )
custom_fonts/font = SubResource( 6 )
text = "Credit music
from PlayOnLoop.com
and \"phoenix1291\"

Licensed under
Creative Commons by Attribution 4.0
and MIT"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title4" type="Label" parent="installation"]
margin_left = 17.0
margin_top = 398.0
margin_right = 481.0
margin_bottom = 425.0
rect_pivot_offset = Vector2( 241, 13.5 )
custom_fonts/font = SubResource( 6 )
text = "... and autoload the script for use whenever you want!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title7" type="Label" parent="installation"]
margin_left = 882.0
margin_top = 18.0
margin_right = 913.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 241, 13.5 )
custom_fonts/font = SubResource( 6 )
text = "OST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title8" type="Label" parent="installation"]
margin_left = 640.0
margin_top = 17.0
margin_right = 671.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 241, 13.5 )
custom_fonts/font = SubResource( 6 )
text = "sfx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title5" type="Label" parent="installation"]
margin_left = 836.0
margin_top = 223.0
margin_right = 952.0
margin_bottom = 239.0
rect_pivot_offset = Vector2( 241, 13.5 )
custom_fonts/font = SubResource( 6 )
text = "Volume slider"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="example1" type="Sprite" parent="installation"]
position = Vector2( 148, 298.636 )
texture = ExtResource( 2 )

[node name="example2" type="Sprite" parent="installation"]
position = Vector2( 319, 498.795 )
texture = ExtResource( 3 )

[node name="Interactive" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Interactive"]
margin_left = 814.0
margin_top = 48.0
margin_right = 978.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 7 )
text = "Play music 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Interactive"]
margin_left = 811.0
margin_top = 104.0
margin_right = 975.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 7 )
text = "Play music 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Interactive"]
margin_left = 812.0
margin_top = 161.0
margin_right = 976.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 7 )
text = "Switch music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Interactive"]
margin_left = 569.0
margin_top = 49.0
margin_right = 646.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 7 )
text = "JUMP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="Interactive"]
margin_left = 571.0
margin_top = 162.0
margin_right = 648.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 7 )
text = "space"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="Interactive"]
margin_left = 661.0
margin_top = 162.0
margin_right = 738.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 7 )
text = "roar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Interactive"]
margin_left = 660.0
margin_top = 50.0
margin_right = 737.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 7 )
text = "PICKUP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="Interactive"]
margin_left = 569.0
margin_top = 105.0
margin_right = 737.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 7 )
text = "powerup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Interactive"]
margin_left = 820.0
margin_top = 247.0
margin_right = 973.0
margin_bottom = 263.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Interactive/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Interactive/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Interactive/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Interactive/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Interactive/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Interactive/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Interactive/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Interactive/Button6" to="." method="_on_Button6_pressed"]
[connection signal="value_changed" from="Interactive/HSlider" to="." method="_on_HSlider_value_changed"]
